Changed the languages in index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </p>
     <h2>Languages</h2>
     <ol>
-        <li>English</li>
-        <li>Kiswahili</li>
+        <li>HTML</li>
+        <li>CSS</li>
         <li></li>
     </ol>
     <div></div>
