--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>My Bio</h1>
     <p>My name is Evalyne Mueke
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio odio, nemo explicabo nostrum optio fugit voluptatem totam voluptatibus magni eligendi!</p>
         
     
     </p>
